3d view objects not rendered. #30472

Closed
opened 2012-03-07 01:02:15 +01:00 by Dave Holloway · 20 comments

%%%For a few days, now I have been getting a very strange problem in the cycles rendered 3d view.
Some times the objects appear normal. Sometimes they appear black, or not rendered. There doesent seem to be any paturn that I can spot.
You can load the same file twice and have it work one time, and then not the next. This is happening with many of my blends but is totaly random. Some times switching a material and switching back will cure it. Some times assigning new uv cords works.
I think it was introduced about the time bmesh became merged, or possably with AO.
I have been tryng to solve the problem myself for some time, but keep drawing a blank.
This vieport render was with r44687 on xp sp3. Ive allso up dated to the latest drivers, and updated to cuda toolkit 4.1 which has cured a memory allocation error while compiling the 1.3 kernal. I compile with cmake and vc2008.
The following image shows the problem.
http://www.pasteall.org/pic/27924
Ive included the console read out as I think this is connected.
An F12 render works fine.

%%%

%%%For a few days, now I have been getting a very strange problem in the cycles rendered 3d view. Some times the objects appear normal. Sometimes they appear black, or not rendered. There doesent seem to be any paturn that I can spot. You can load the same file twice and have it work one time, and then not the next. This is happening with many of my blends but is totaly random. Some times switching a material and switching back will cure it. Some times assigning new uv cords works. I think it was introduced about the time bmesh became merged, or possably with AO. I have been tryng to solve the problem myself for some time, but keep drawing a blank. This vieport render was with r44687 on xp sp3. Ive allso up dated to the latest drivers, and updated to cuda toolkit 4.1 which has cured a memory allocation error while compiling the 1.3 kernal. I compile with cmake and vc2008. The following image shows the problem. http://www.pasteall.org/pic/27924 Ive included the console read out as I think this is connected. An F12 render works fine. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%This problem my only affect cmake anv vc2008 builds. Ive spent a few hours using bat3a's 44664 build from grapicall, without encountering the bug.
He uses scons & msvcsp1 to compile.%%%

%%%This problem my only affect cmake anv vc2008 builds. Ive spent a few hours using bat3a's 44664 build from grapicall, without encountering the bug. He uses scons & msvcsp1 to compile.%%%
Author

%%%Sorry for being so vague about this, but its not down to the compiler, as I have now had the same fault with bat3a's build.
The objects render correctly in all other modes in the 3d view and a full f12 render.
Only in the 3d cycles rendered mode is there a problem. some times it is a individual object, sometimes the whole scene excluding the background.
???%%%

%%%Sorry for being so vague about this, but its not down to the compiler, as I have now had the same fault with bat3a's build. The objects render correctly in all other modes in the 3d view and a full f12 render. Only in the 3d cycles rendered mode is there a problem. some times it is a individual object, sometimes the whole scene excluding the background. ???%%%
Author

%%%I should add, I have tried a completely clean cheakout from the SVN and still getting the random error. Build 44702.%%%

%%%I should add, I have tried a completely clean cheakout from the SVN and still getting the random error. Build 44702.%%%
Author

%%%In the 3D view port, the offending oject renders black, until "Transparent" is checked in Film tab. It then becomes totally transparant enableing the back ground grid to be seen.
Ive tried all the usuall fixes, such as appending, applying modifiers, recreating materials, reapplying uv cords.
Its as if it pics an object at random assigns an incorrect draw mode to it.
Does it have anything to do with "masks"%%%

%%%In the 3D view port, the offending oject renders black, until "Transparent" is checked in Film tab. It then becomes totally transparant enableing the back ground grid to be seen. Ive tried all the usuall fixes, such as appending, applying modifiers, recreating materials, reapplying uv cords. Its as if it pics an object at random assigns an incorrect draw mode to it. Does it have anything to do with "masks"%%%
Author
%%%http://www.pasteall.org/pic/27956 http://www.pasteall.org/pic/27957 http://www.pasteall.org/pic/27958 http://www.pasteall.org/pic/27959 http://www.pasteall.org/pic/27960 http://www.pasteall.org/pic/27961%%%
Author

%%%You might notice in the above series of images, it is not only the deck that is affected. Also the funnel tops are rendered incorrectly.
The deck has uv cords and texture map, the funnel top has just a diffuse material.%%%

%%%You might notice in the above series of images, it is not only the deck that is affected. Also the funnel tops are rendered incorrectly. The deck has uv cords and texture map, the funnel top has just a diffuse material.%%%

%%%Can you please check builds from http://builder.blender.org/download/ ? Such kind of things might depend on build environment and this need to be figured out.%%%

%%%Can you please check builds from http://builder.blender.org/download/ ? Such kind of things might depend on build environment and this need to be figured out.%%%
Author

%%%These pics, are using the build bot build rev 44696 win 32.

http://www.pasteall.org/pic/28007

http://www.pasteall.org/pic/28008

http://www.pasteall.org/pic/28010

http://www.pasteall.org/pic/28011 this the layer and mask settings.

On exiting blender and restarting, it displayed this file correctly.

%%%

%%%These pics, are using the build bot build rev 44696 win 32. http://www.pasteall.org/pic/28007 http://www.pasteall.org/pic/28008 http://www.pasteall.org/pic/28010 http://www.pasteall.org/pic/28011 this the layer and mask settings. On exiting blender and restarting, it displayed this file correctly. %%%

%%%i've noticed this issue as well on osx 10.7.2.

it occurs random and solves by reloading cycles (stop viewport render, start it again).

i could not see any pattern where and when it appears.%%%

%%%i've noticed this issue as well on osx 10.7.2. it occurs random and solves by reloading cycles (stop viewport render, start it again). i could not see any pattern where and when it appears.%%%
Author

%%%Ok, I think ive spoted a paturn at last.
As mad as it sounds, it seems to start occuring on the 5th opened file in a session, with possably 1 or 2 objects rendered incorrectly.
Then getting progresivly worse. %%%

%%%Ok, I think ive spoted a paturn at last. As mad as it sounds, it seems to start occuring on the 5th opened file in a session, with possably 1 or 2 objects rendered incorrectly. Then getting progresivly worse. %%%

%%%The same issue occurs to scons compiled on osx 10.7.3.
Sadly I cannot add any advise to what already pointed out.%%%

%%%The same issue occurs to scons compiled on osx 10.7.3. Sadly I cannot add any advise to what already pointed out.%%%

%%%Switching to Static BVH seems to make objects rendered again, but it sticks to black screen, pass 1, for a long time and goes very very slow, respect to previous versions.%%%

%%%Switching to Static BVH seems to make objects rendered again, but it sticks to black screen, pass 1, for a long time and goes very very slow, respect to previous versions.%%%

%%%Switching back to Dynamic BVH all object now render fine.%%%

%%%Switching back to Dynamic BVH all object now render fine.%%%

%%%No, sorry, one object disappeared totally (not black but invisible).%%%

%%%No, sorry, one object disappeared totally (not black but invisible).%%%

%%%I can confirm that behaviour on Windows 7, (self compiled svn builds). Going gtom Solid to Rendered View, all is black. If you try again (Solid > Rendered) it most of the times works. I smell B-Mesh.... :/ %%%

%%%I can confirm that behaviour on Windows 7, (self compiled svn builds). Going gtom Solid to Rendered View, all is black. If you try again (Solid > Rendered) it most of the times works. I smell B-Mesh.... :/ %%%

%%%Attached a file (File2.blend). Tested with SVN 44783) on Windows7
Open it and change to Rendered View in the 3D View. Maybe it works, maybe its complete black. If it works, abort render (go back to solid or wireframe mode) and change the current frame, then go back to Rendered View. Sooner or later it happens and the 3D view only renders black. %%%

%%%Attached a file (File2.blend). Tested with SVN 44783) on Windows7 Open it and change to Rendered View in the 3D View. Maybe it works, maybe its complete black. If it works, abort render (go back to solid or wireframe mode) and change the current frame, then go back to Rendered View. Sooner or later it happens and the 3D view only renders black. %%%

%%%will investigate this week (if nobody gets there first)%%%

%%%will investigate this week (if nobody gets there first)%%%

%%%The holdout layer wasn't initialized on re-rendering (using garbage values).

fixed r44820%%%

%%%The holdout layer wasn't initialized on re-rendering (using garbage values). fixed r44820%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30472
No description provided.