fix [#30472] 3d view objects not rendered, cycles.

holdout layer wasnt initializes in some cases.